syntax = "proto3";

package helloworld;

// Указываем путь импорта для Go.
// Это позволяет избежать магии с sed/echo в justfile.
option go_package = "my-go-app/proto/helloworld";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
