package main

import (
	"context"
	"encoding/json" // <--- Ð”Ð¾Ð±Ð°Ð²Ð»ÐµÐ½ Ð¸Ð¼Ð¿Ð¾Ñ€Ñ‚ Ð´Ð»Ñ JSON
	"fmt"
	"log"
	"net"
	"net/http"
	"os"
	"path/filepath"

	pb "my-go-app/proto/helloworld"

	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

var Version = "dev"

// --- gRPC Server Implementation ---
type server struct {
	pb.UnimplementedGreeterServer
}

func (s *server) SayHello(ctx context.Context, in *pb.HelloRequest) (*pb.HelloReply, error) {
	log.Printf("gRPC Received: %v", in.GetName())
	return &pb.HelloReply{Message: "Hello from Nix/gRPC " + in.GetName()}, nil
}

// --- HTTP API Handler ---
// ÐŸÑ€Ð¾ÑÑ‚Ð¾Ð¹ Ð¾Ð±Ñ€Ð°Ð±Ð¾Ñ‚Ñ‡Ð¸Ðº Ð´Ð»Ñ REST Ð·Ð°Ð¿Ñ€Ð¾ÑÐ¾Ð² Ð¾Ñ‚ Vue
func apiHelloHandler(w http.ResponseWriter, r *http.Request) {
	w.Header().Set("Content-Type", "application/json")
	response := map[string]string{
		"message": "Hello from Go Backend! ðŸš€",
	}
	json.NewEncoder(w).Encode(response)
}

func main() {
	fmt.Printf("Starting App... Version: %s\n", Version)

	forever := make(chan bool)

	// 1. gRPC Server
	go func() {
		port := ":50051"
		lis, err := net.Listen("tcp", port)
		if err != nil {
			log.Fatalf("failed to listen gRPC: %v", err)
		}
		s := grpc.NewServer()
		pb.RegisterGreeterServer(s, &server{})
		reflection.Register(s)
		log.Printf("âœ… gRPC server listening at %v", lis.Addr())
		if err := s.Serve(lis); err != nil {
			log.Fatalf("failed to serve gRPC: %v", err)
		}
	}()

	// 2. HTTP Server (Vue + API)
	go func() {
		staticDir := os.Getenv("SERVER_STATIC_DIR")
		if staticDir == "" {
			staticDir = "./static"
		}

		absPath, _ := filepath.Abs(staticDir)

		// -- 1. Ð ÐµÐ³Ð¸ÑÑ‚Ñ€Ð¸Ñ€ÑƒÐµÐ¼ API Ñ…ÐµÐ½Ð´Ð»ÐµÑ€Ñ‹ (Ð´Ð¾ FileServer!) --
		http.HandleFunc("/api/hello", apiHelloHandler)

		// -- 2. Ð Ð°Ð·Ð´Ð°ÐµÐ¼ ÑÑ‚Ð°Ñ‚Ð¸ÐºÑƒ Vue --
		if _, err := os.Stat(staticDir); !os.IsNotExist(err) {
			// FileServer Ð¾Ð±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÑ‚ Ð²ÑÑ‘ Ð¾ÑÑ‚Ð°Ð»ÑŒÐ½Ð¾Ðµ
			http.Handle("/", http.FileServer(http.Dir(staticDir)))
			log.Printf("âœ… Serving Vue from: %s (Abs: %s)", staticDir, absPath)
		} else {
			log.Printf("âš ï¸  No static files found at: %s (Abs: %s). API only.", staticDir, absPath)
		}

		log.Println("âœ… HTTP listening at :8080")
		if err := http.ListenAndServe(":8080", nil); err != nil {
			log.Fatalf("failed to serve HTTP: %v", err)
		}
	}()

	<-forever
}
